[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ase-ai"
version = "0.1.0"
description = "MCP server that lets Claude Desktop control Aseprite via Lua scripts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
ase-ai = "ase_ai.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ase_ai"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0.0",
]
